footer spacing fixed on mobile

--- a/styles.css
+++ b/styles.css
@@ -395,4 +395,7 @@ html, body {
   .about {
     flex-direction: column;
   }
+  .footer {
+    padding: 1rem 1rem;
+  }
 }
